# Self-Driving

./: .gitignore  README.md
autopilot/: CMakeLists.txt  config.h  config.h.in  loop.sh  main.cpp
control/: CMakeLists.txt  Motor.cpp  Motor.h  main.cpp
distributed-autopilot/: CameraManager.cpp  CameraManager.h  Lanefinder.cpp  Lanefinder.h
distributed-autopilot/p1/: main.cpp
distributed-autopilot/p2/: main.cpp
distributed-autopilot/p3/: @  main.cpp
distributed-autopilot/p4/: CMakeLists.txt  main.cpp
